Fix vertical scrollbar on first infowindow instantiation

--- a/scss/_ball-clip-rotate.scss
+++ b/scss/_ball-clip-rotate.scss
@@ -14,7 +14,6 @@
 
 .la-ball-clip-rotate {
     display: block;
-    font-size: 0;
     &, & > div {
         position: relative;
         box-sizing: border-box;
